deploy/resources/generation/resources/generation/resources/generation/resources/generation/sas-bases/overlays/network/networking.k8s.io/v1/ingress/components/sas-catalog-services/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/proxy-body-size: 2048m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/rewrite-target: /catalog/$2
    nginx.ingress.kubernetes.io/session-cookie-name: sas-ingress-nginx
    nginx.ingress.kubernetes.io/session-cookie-path: /catalog/
    nginx.ingress.kubernetes.io/session-cookie-samesite: Lax
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-catalog
    sas.com/admin: namespace
  name: sas-catalog
spec:
  ingressClassName: nginx
  rules:
  - host: $(INGRESS_HOST)
    http:
      paths:
      - backend:
          service:
            name: sas-catalog
            port:
              number: 80
        path: /catalog(/|$)(.*)
        pathType: ImplementationSpecific
  - host: '*.$(INGRESS_HOST)'
    http:
      paths:
      - backend:
          service:
            name: sas-catalog
            port:
              number: 80
        path: /catalog(/|$)(.*)
        pathType: ImplementationSpecific

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/proxy-body-size: 2048m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/rewrite-target: /catalogTableBot/$2
    nginx.ingress.kubernetes.io/session-cookie-name: sas-ingress-nginx
    nginx.ingress.kubernetes.io/session-cookie-path: /catalogTableBot/
    nginx.ingress.kubernetes.io/session-cookie-samesite: Lax
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-catalog-table-bot
    sas.com/admin: namespace
  name: sas-catalog-table-bot
spec:
  ingressClassName: nginx
  rules:
  - host: $(INGRESS_HOST)
    http:
      paths:
      - backend:
          service:
            name: sas-catalog-table-bot
            port:
              number: 80
        path: /catalogTableBot(/|$)(.*)
        pathType: ImplementationSpecific
  - host: '*.$(INGRESS_HOST)'
    http:
      paths:
      - backend:
          service:
            name: sas-catalog-table-bot
            port:
              number: 80
        path: /catalogTableBot(/|$)(.*)
        pathType: ImplementationSpecific

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/proxy-body-size: 2048m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/rewrite-target: /glossary/$2
    nginx.ingress.kubernetes.io/session-cookie-name: sas-ingress-nginx
    nginx.ingress.kubernetes.io/session-cookie-path: /glossary/
    nginx.ingress.kubernetes.io/session-cookie-samesite: Lax
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-glossary
    sas.com/admin: namespace
  name: sas-glossary
spec:
  ingressClassName: nginx
  rules:
  - host: $(INGRESS_HOST)
    http:
      paths:
      - backend:
          service:
            name: sas-glossary
            port:
              number: 80
        path: /glossary(/|$)(.*)
        pathType: ImplementationSpecific
  - host: '*.$(INGRESS_HOST)'
    http:
      paths:
      - backend:
          service:
            name: sas-glossary
            port:
              number: 80
        path: /glossary(/|$)(.*)
        pathType: ImplementationSpecific

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/proxy-body-size: 2048m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/rewrite-target: /relationships/$2
    nginx.ingress.kubernetes.io/session-cookie-name: sas-ingress-nginx
    nginx.ingress.kubernetes.io/session-cookie-path: /relationships/
    nginx.ingress.kubernetes.io/session-cookie-samesite: Lax
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-relationships
    sas.com/admin: namespace
  name: sas-relationships
spec:
  ingressClassName: nginx
  rules:
  - host: $(INGRESS_HOST)
    http:
      paths:
      - backend:
          service:
            name: sas-relationships
            port:
              number: 80
        path: /relationships(/|$)(.*)
        pathType: ImplementationSpecific
  - host: '*.$(INGRESS_HOST)'
    http:
      paths:
      - backend:
          service:
            name: sas-relationships
            port:
              number: 80
        path: /relationships(/|$)(.*)
        pathType: ImplementationSpecific
